Rotation rotates members properly through the different roles.